# chili

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.cursor/rules/: no-cursor-attribution.mdc
.github/workflows/: release-py.yml
crates/chili-bin/: Cargo.toml  pyproject.toml
crates/chili-bin/src/: completer.rs  logger.rs  main.rs  pipe.rs  validator.rs
crates/chili-core/: Cargo.toml
crates/chili-core/benches/: parse_cache.rs
crates/chili-core/src/: arg_type.rs  ast_node.rs  authinfo.rs  broker.rs  constant.rs  engine_state.rs  errors.rs  eval.rs  eval_query.rs  func.rs  io.rs  job.rs  lib.rs  obj.rs  par_df.rs  parser.rs  serde6.rs  serde9.rs  side_effect_fn.rs  stack.rs  utils.rs
crates/chili-core/tests/: async_reply_test.rs  chi_pkg_test.rs  engine_stats_introspection_test.rs  fmt_test.rs  fsync_recovery_test.rs  job_quarantine_test.rs  parse_cache_test.rs  post_eval_hook_test.rs  pre_eval_hook_test.rs  replay_tolerance_test.rs  roll_tick_test.rs  slow_subscriber_shed_test.rs  validate_seq_strict_test.rs
crates/chili-grammar/: Cargo.toml
crates/chili-grammar/src/: chili.pest
crates/chili-grammar/tests/: parser_test.rs  util.rs
crates/chili-op/: Cargo.toml
crates/chili-op/benches/: categorical_eval.rs  eval.rs  write_partition.rs
crates/chili-op/benches/common/: mod.rs
crates/chili-op/src/: basic.rs  built_in_fn.rs  collection.rs  df.rs  io.rs  lib.rs  logger.rs  math.rs  matrix.rs  operator.rs  random.rs  series_op.rs  str.rs  sys.rs  temporal.rs  util.rs
crates/chili-op/tests/: arithmetic_test.rs  chili_test.rs  error_trace_test.rs  eval_test.rs  hdb_test.rs  partition_atomic_codec_test.rs  partition_filter_test.rs  replay_test.rs  util.rs
crates/chili-op/tests/data/table1/: 2000.01.01_00  20000103_0000  schema
crates/chili-op/tests/data/table2/: schema
crates/chili-op/tests/data/table3/: 2000_00
crates/chili-op/tests/src/: main.chi  main.pep
crates/chili-op/tests/src/lib/: constant.chi
crates/chili-op/tests/tp_log/: 20250707.data  20250707.size
crates/chili-parser/: Cargo.toml
crates/chili-parser/src/: expr.rs  language.rs  lib.rs  token.rs  utils.rs
crates/chili-parser/tests/: lib.rs  utils.rs
crates/chili-parser/tests/chili/: mod.rs  test_error.rs  test_expr.rs  test_source_expr.rs
crates/chili-parser/tests/chili/src/: special.chi  sub.chi  value.chi
crates/chili-parser/tests/pepper/: mod.rs  test_expr.rs  test_source_expr.rs
crates/chili-parser/tests/pepper/src/: sub.pep  tick.pep
crates/chili-parser/tests/token/: mod.rs  test_simple_token.rs  test_source_token.rs  test_special_token.rs  test_value_token.rs
crates/chili-py/: Cargo.toml  README.md  pyproject.toml  requirements.txt
crates/chili-py/chili/: __init__.py  engine.py
crates/chili-py/chili/src/: sub.pep  tick.pep
crates/chili-py/src/: lib.rs
crates/chili-py/tests/: bench_concurrent.py  test_add_at_time.py  test_engine.py  test_pepper_syntax.py  test_subscriber_eod_dispatch.py  test_tcp_listener_bind.py  test_tick_sub.py  test_tick_sub_filtered.py
crates/chili-vintage-grammar/: Cargo.toml
crates/chili-vintage-grammar/src/: chili.pest  lib.rs
crates/chili-vintage-grammar/tests/: parser_test.rs  util.rs
podman/: Dockerfile
vim-config/ftdetect/: chi.vim  pep.vim
vim-config/syntax/: chi.vim  pep.vim
