[package]
name = "chili-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.12"
chili-op = { path = "../chili-op" }
chili-core = { path = "../chili-core" }
chili-parser = { path = "../chili-parser" }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
reedline = { version = "0.45.0", features = ["external_printer"] }
nu-ansi-term = "0.50.3"
chrono = "0.4"
sysinfo = "0.38.2"
crossterm = "0.29"
chumsky = { workspace = true }

[[bin]]
name = "chili"
path = "src/main.rs"
