[package]
name = "chili-op"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "chili operations"

[features]
matrix = ["ndarray-linalg/openblas-static"]
vintage = ['chili-core/vintage']

[dependencies]
polars = { workspace = true, default-features = true, features = [
    "abs",
    "asof_join",
    "concat_str",
    "cov",
    "cum_agg",
    "diff",
    "dtype-categorical",
    "dtype-decimal",
    "dtype-i16",
    "dtype-struct",
    "dtype-u8",
    "dynamic_group_by",
    "ewma",
    "interpolate",
    "is_between",
    "is_in",
    "ipc",
    "json",
    "lazy",
    "list_sets",
    "log",
    "mode",
    "moment",
    "month_start",
    "month_end",
    "ndarray",
    "offset_by",
    "parquet",
    "pct_change",
    "polars-ops",
    "polars-io",
    "random",
    "range",
    "rank",
    "regex",
    "rolling_window",
    "round_series",
    "row_hash",
    "timezones",
    "search_sorted",
    "semi_anti_join",
    "serde",
    "serde-lazy",
    "sign",
    "string_pad",
    "strings",
    "top_k",
    "trigonometry",
    "unique_counts",
    "zip_with",
] }
polars-lazy = { workspace = true, features = ["pivot"] }
polars-compute = { workspace = true }
chrono = "0.4"
chrono-tz = "0.10"
indexmap = "2.10"
glob = "0.3"
polars-arrow = { workspace = true }
polars-ops = { workspace = true, features = ["pivot"] }
rand = "0.9"
ndarray = "0.16"
regex = "1.11"
ndarray-linalg = { version = "0.17.0", optional = true }
chili-core = { path = "../chili-core" }
num = "0.4"
