[package]
name = "chili-py"
version = "0.9.2"
edition = "2024"
authors = ["The Chili Authors <purple-chili@hotmail.com>"]
description = "Python bindings for chili-core EngineState"

[lib]
name = "engine_state"
crate-type = ["cdylib"]

[dependencies]
chili-core = { path = "../chili-core" }
chili-op = { path = "../chili-op" }
indexmap = "2.14.0"
polars = { version = "0.54.4" }
pyo3 = { version = "0.28", features = ["abi3-py310", "chrono"] }
pyo3-polars = { version = "0.27.0", features = ["lazy"] }
chrono = { version = "0.4" }
