[build-system]
requires = ["maturin>=1.9", "setuptools-rust>=1.12"]
build-backend = "maturin"

[project]
name = "chili-sauce"
version = "0.9.4"
description = "Python bindings for the Chili engine (EngineState)"
requires-python = ">=3.10"
readme = "README.md"

[tool.maturin]
module-name = "chili.engine_state"
python-source = "."
include = ["chili/py.typed"]
